cambios para que se vean imagenes

--- a/platos_de_fondo.html
+++ b/platos_de_fondo.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/stylesfondo.css">
-  <link rel="icon" href="/imagenes/Favicon.png">
+  <link rel="icon" href="./imagenes/Favicon.png">
   <title>Chef Virtual - Inicio</title>
 </head>
 <body class="platos-de-fondo">
@@ -12,7 +12,7 @@
     <main>
     <nav>
       <div class="logo">
-        <img src="/imagenes/logo.png" alt="Logo Chef Virtual">
+        <img src="./imagenes/logo.png" alt="Logo Chef Virtual">
       </div>
       <ul class="navbar">
         <li><a href="index.html">Inicio</a></li>
@@ -32,7 +32,7 @@
 
   <section class="recipes">
     <div class="recipe-card">
-      <img src="/imagenes/fondo1.jpg" alt="Pasta con Salmon">
+      <img src="./imagenes/fondo1.jpg" alt="Pasta con Salmon">
       <h3>Pasta con Salmon</h3>
       <h4>Ingredientes:</h4>
       <ul>
@@ -57,7 +57,7 @@
       </ol>
     </div>
     <div class="recipe-card">
-      <img src="/imagenes/fondo2.jpg" alt="Pollo a la parrilla">
+      <img src="./imagenes/fondo2.jpg" alt="Pollo a la parrilla">
       <h3>Pollo a la parrilla</h3>
       <li>Jugo de limón</li>
       <li>Aceite de oliva</li>
@@ -79,13 +79,13 @@
   </main>
   <footer>
     <div class="logo">
-      <img src="/imagenes/Logoblanco.png" alt="Logo Chef Virtual">
+      <img src="./imagenes/Logoblanco.png" alt="Logo Chef Virtual">
     </div>
     <p class="rights">Todos los derechos reservados Debbie Rochenszwalb &copy; 2023</p>
     <div class="social-icons">
-      <a href="#"><img src="/imagenes/instagram.png" alt="Instagram"></a>
-      <a href="#"><img src="/imagenes/facebook.png" alt="Facebook"></a>
-      <a href="#"><img src="/imagenes/twitter.png" alt="Twitter"></a>
+      <a href="#"><img src="./imagenes/instagram.png" alt="Instagram"></a>
+      <a href="#"><img src="./imagenes/facebook.png" alt="Facebook"></a>
+      <a href="#"><img src="./imagenes/twitter.png" alt="Twitter"></a>
     </div>
   </footer>
   <script src="app.js"></script>
