--- a/ensaladas.html
+++ b/ensaladas.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/stylesensalada.css">
-  <link rel="icon" href="/imagenes/Favicon.png">
+  <link rel="icon" href="./imagenes/Favicon.png">
   <title>Chef Virtual - Inicio</title>
 </head>
 <body class="ensaladas">
@@ -12,7 +12,7 @@
     <main>
     <nav>
       <div class="logo">
-        <img src="/imagenes/logo.png" alt="Logo Chef Virtual">
+        <img src="./imagenes/logo.png" alt="Logo Chef Virtual">
       </div>
       <ul class="navbar">
         <li><a href="index.html">Inicio</a></li>
@@ -32,7 +32,7 @@
 
   <section class="recipes">
     <div class="recipe-card">
-      <img src="/imagenes/ensalada1.jpg" alt="Ensalada de Verano">
+      <img src="./imagenes/ensalada1.jpg" alt="Ensalada de Verano">
       <h3>Ensalada de Verano</h3>
       <h4>Ingredientes:</h4>
       <ul>
@@ -56,7 +56,7 @@
       </ol>
     </div>
     <div class="recipe-card">
-      <img src="/imagenes/ensalada2.jpg" alt="Ensalada Cesar">
+      <img src="./imagenes/ensalada2.jpg" alt="Ensalada Cesar">
       <h3>Ensalada Cesar</h3>
       <h4>Ingredientes:</h4>
   <ul>
@@ -82,13 +82,13 @@
 </main>
   <footer>
     <div class="logo">
-      <img src="/imagenes/Logoblanco.png" alt="Logo Chef Virtual">
+      <img src="./imagenes/Logoblanco.png" alt="Logo Chef Virtual">
     </div>
     <p class="rights">Todos los derechos reservados Debbie Rochenszwalb &copy; 2023</p>
     <div class="social-icons">
-      <a href="#"><img src="/imagenes/instagram.png" alt="Instagram"></a>
-      <a href="#"><img src="/imagenes/facebook.png" alt="Facebook"></a>
-      <a href="#"><img src="/imagenes/twitter.png" alt="Twitter"></a>
+      <a href="#"><img src="./imagenes/instagram.png" alt="Instagram"></a>
+      <a href="#"><img src="./imagenes/facebook.png" alt="Facebook"></a>
+      <a href="#"><img src="./imagenes/twitter.png" alt="Twitter"></a>
     </div>
   
   </footer>
