--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="/imagenes/Favicon.png">
+  <link rel="icon" href="./imagenes/Favicon.png">
   <title>Chef Virtual - Inicio</title>
 </head>
 <body class="index">
@@ -12,7 +12,7 @@
     <main>
     <nav>
       <div class="logo">
-        <img src="/imagenes/logo.png" alt="Logo Chef Virtual">
+        <img src="./imagenes/logo.png" alt="Logo Chef Virtual">
       </div>
       <ul class="navbar">
         <li><a href="index.html">Inicio</a></li>
@@ -37,17 +37,17 @@
   </header>
   <section class="recipes">
     <div class="recipe-card">
-      <img src="/imagenes/fondo.jpg" alt="Platos de Fondo">
+      <img src="./imagenes/fondo.jpg" alt="Platos de Fondo">
       <h3>Platos de Fondo</h3>
       <a href="platos_de_fondo.html">Ver recetas</a>
     </div>
     <div class="recipe-card">
-      <img src="/imagenes/ensalada.jpg" alt="Ensaladas">
+      <img src="./imagenes/ensalada.jpg" alt="Ensaladas">
       <h3>Ensaladas</h3>
       <a href="ensaladas.html">Ver recetas</a>
     </div>
     <div class="recipe-card">
-      <img src="/imagenes/postre.jpg" alt="Postres">
+      <img src="./imagenes/postre.jpg" alt="Postres">
       <h3>Postres</h3>
       <a href="postres.html">Ver recetas</a>
     </div>
@@ -55,13 +55,13 @@
 </main>
   <footer>
     <div class="logo">
-      <img src="/imagenes/Logoblanco.png" alt="Logo Chef Virtual">
+      <img src="./imagenes/Logoblanco.png" alt="Logo Chef Virtual">
     </div>
     <p class="rights">Todos los derechos reservados Debbie Rochenszwalb &copy; 2023</p>
     <div class="social-icons">
-      <a href="#"><img src="/imagenes/instagram.png" alt="Instagram"></a>
-      <a href="#"><img src="/imagenes/facebook.png" alt="Facebook"></a>
-      <a href="#"><img src="/imagenes/twitter.png" alt="Twitter"></a>
+      <a href="#"><img src="./imagenes/instagram.png" alt="Instagram"></a>
+      <a href="#"><img src="./imagenes/facebook.png" alt="Facebook"></a>
+      <a href="#"><img src="./imagenes/twitter.png" alt="Twitter"></a>
     </div>
   </footer>
   <script src="app.js"></script>
