--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="./styles.css">
   <link rel="icon" href="./imagenes/Favicon.png">
   <title>Chef Virtual - Inicio</title>
 </head>
@@ -64,5 +64,5 @@
       <a href="#"><img src="./imagenes/twitter.png" alt="Twitter"></a>
     </div>
   </footer>
-  <script src="app.js"></script>
+  <script src="./app.js"></script>
 </body>
