--- a/ensaladas.html
+++ b/ensaladas.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/stylesensalada.css">
+  <link rel="stylesheet" href="./stylesensalada.css">
   <link rel="icon" href="./imagenes/Favicon.png">
   <title>Chef Virtual - Inicio</title>
 </head>
@@ -92,6 +92,6 @@
     </div>
   
   </footer>
-  <script src="app.js"></script>
+  <script src="./app.js"></script>
 </body>
 </html>
