--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
       <a href="platos_de_fondo.html">Ver recetas</a>
     </div>
     <div class="recipe-card">
-      <img src="./imagenes/ensalada.jpg" alt="Ensaladas">
+      <img src="./imagenes/Ensalada.jpg" alt="Ensaladas">
       <h3>Ensaladas</h3>
       <a href="ensaladas.html">Ver recetas</a>
     </div>
     <div class="recipe-card">
-      <img src="./imagenes/postre.jpg" alt="Postres">
+      <img src="./imagenes/Postre.jpg" alt="Postres">
       <h3>Postres</h3>
       <a href="postres.html">Ver recetas</a>
     </div>
