--- a/postres.html
+++ b/postres.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./stylespostres.css">
-  <link rel="icon" href="./imagenes/Favicon.png">
+  <link rel="icon" href="./imagenes/favicon.png">
   <title>Chef Virtual - Inicio</title>
 </head>
 <body class="postres">
@@ -85,7 +85,7 @@
 
   <footer>
     <div class="logo">
-      <img src="./imagenes/Logoblanco.png" alt="Logo Chef Virtual">
+      <img src="./imagenes/logoblanco.png" alt="Logo Chef Virtual">
     </div>
     <p class="rights">Todos los derechos reservados Debbie Rochenszwalb &copy; 2023</p>
     <div class="social-icons">
