--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles.css">
-  <link rel="icon" href="./imagenes/Favicon.png">
+  <link rel="icon" href="./imagenes/favicon.png">
   <title>Chef Virtual - Inicio</title>
 </head>
 <body class="index">
@@ -55,7 +55,7 @@
 </main>
   <footer>
     <div class="logo">
-      <img src="./imagenes/Logoblanco.png" alt="Logo Chef Virtual">
+      <img src="./imagenes/logoblanco.png" alt="Logo Chef Virtual">
     </div>
     <p class="rights">Todos los derechos reservados Debbie Rochenszwalb &copy; 2023</p>
     <div class="social-icons">
