--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles.css">
-  <link rel="icon" href="./imagenes/favicon.png">
+  <link rel="icon" href="./imagenes/favicon0.png">
   <title>Chef Virtual - Inicio</title>
 </head>
 <body class="index">
@@ -42,12 +42,12 @@
       <a href="platos_de_fondo.html">Ver recetas</a>
     </div>
     <div class="recipe-card">
-      <img src="./imagenes/ensalada.jpg" alt="Ensaladas">
+      <img src="./imagenes/ensalada0.jpg" alt="Ensaladas">
       <h3>Ensaladas</h3>
       <a href="ensaladas.html">Ver recetas</a>
     </div>
     <div class="recipe-card">
-      <img src="./imagenes/postre.jpg" alt="Postres">
+      <img src="./imagenes/postre0.jpg" alt="Postres">
       <h3>Postres</h3>
       <a href="postres.html">Ver recetas</a>
     </div>
@@ -55,7 +55,7 @@
 </main>
   <footer>
     <div class="logo">
-      <img src="./imagenes/logoblanco.png" alt="Logo Chef Virtual">
+      <img src="./imagenes/logoblanco0.png" alt="Logo Chef Virtual">
     </div>
     <p class="rights">Todos los derechos reservados Debbie Rochenszwalb &copy; 2023</p>
     <div class="social-icons">
