--- a/platos_de_fondo.html
+++ b/platos_de_fondo.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./stylesfondo.css">
-  <link rel="icon" href="./imagenes/favicon.png">
+  <link rel="icon" href="./imagenes/favicon0.png">
   <title>Chef Virtual - Inicio</title>
 </head>
 <body class="platos-de-fondo">
@@ -79,7 +79,7 @@
   </main>
   <footer>
     <div class="logo">
-      <img src="./imagenes/logoblanco.png" alt="Logo Chef Virtual">
+      <img src="./imagenes/logoblanco0.png" alt="Logo Chef Virtual">
     </div>
     <p class="rights">Todos los derechos reservados Debbie Rochenszwalb &copy; 2023</p>
     <div class="social-icons">
